methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:2: error: Invalid literal number
  for (i<-1to 4){
          ^PictureMono1:2: error: Invalid literal number
  for (i<-1to 4){
          ^PictureMono1:2: error: illegal start of simple expression
  for (i<-1to 4){
          ^PictureMono1:4: error: ')' expected but '}' found.
  }
  ^PictureMono1:8: error: expected class or object definition
def dessine() {
^PictureMono1:10: error: Unmatched closing brace '}' ignored here
  }
  ^